--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,9 @@ body {
   font-family: "Futura";
   font-weight: 500;
   margin: 0;
+  max-height: 1920px;
+}
+
+* {
   box-sizing: border-box;
 }
